--- a/src/scss/util/_variable.scss
+++ b/src/scss/util/_variable.scss
@@ -12,7 +12,7 @@
  */
 
 /* Colors */
-$white        : #fff !defalut;
+$white        : #FFFFFF !default;
 
 $gray-base    : #000 !default;
 $gray-darker  : lighten($gray-base, 13.5%) !default; /* #222 */
